<resources>
    <string name="app_name">ChequeWriter</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="storage_icon">Storage Icon</string>
    <string name="permission_message">
        To enjoy the full features of the app, Cheque Writer needs access to the following
        for better user experience and stable environment.
    </string>
    <string name="camera_access_button_text">ALLOW CAMERA ACCESS</string>
    <string name="storage_access_button_text">ALLOW TO READ/WRITE STORAGE</string>
    <string name="close_button_text">CLOSE APPLICATION</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_short">LOGIN</string>
    <string name="sign_up_text_camelCase">Sign up for Cheque Writer</string>
    <string name="sign_up_text_capitallized">SIGN UP</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="hide_button">HIDE</string>
    <string name="show_button">SHOW</string>
    <string name="logout">LOG OUT</string>
    <string name="password_char">********</string>
    <string name="title_activity_privacy_policy_tab">Privacy Policy</string>
    <string name="large_text">
        \n\n\nThis Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You\n
We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created in accordance to legal requirements.\n\n"

【ＤＥＦＩＮＩＴＩＯＮＳ】
For the purposes of this Privacy Policy:


𝗔𝗰𝗰𝗼𝘂𝗻𝘁 - means a unique account created for You to access our Service or parts of our Service.

𝗖𝗼𝗺𝗽𝗮𝗻𝘆 - (referred to as either "the Company", "We", "Us" or "Our" in this Agreement)

𝗖𝗼𝗼𝗸𝗶𝗲𝘀 - are small files that are placed on Your computer, mobile device or any other device by a website, containing the details of Your browsing history on that website among its many uses.

𝗖𝗼𝘂𝗻𝘁𝗿𝘆 - refers to: Philippines

𝗗𝗲𝘃𝗶𝗰𝗲 - means any device that can access the Service such as a computer, a cellphone or a digital tablet.

𝗣𝗲𝗿𝘀𝗼𝗻𝗮𝗹 𝗗𝗮𝘁𝗮 - is any information that relates to an identified or identifiable individual.

𝗦𝗲𝗿𝘃𝗶𝗰𝗲 - refers to the Mobile Application.

𝗦𝗲𝗿𝘃𝗶𝗰𝗲 𝗣𝗿𝗼𝘃𝗶𝗱𝗲𝗿 - means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used.

𝗧𝗵𝗶𝗿𝗱-𝗽𝗮𝗿𝘁𝘆 𝗦𝗼𝗰𝗶𝗮𝗹 𝗠𝗲𝗱𝗶𝗮 𝗦𝗲𝗿𝘃𝗶𝗰𝗲 - refers to any website or any social network website through which a User can log in or create an account to use the Service.

𝗨𝘀𝗮𝗴𝗲 𝗗𝗮𝘁𝗮 - refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).

You means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.\n

【ＴＹＰＥＳ　ＯＦ　ＤＡＴＡ　ＣＯＬＬＥＣＴＥＤ】
    ◘ Personal Data
        While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:
        Camera, Read/Write Storage for Uploading Profile Image(s), and Usage DaTA
    ◘ Usage Data
        Usage Data is collected automatically when using the Service.
        Usage Data may include information such as Your Device's Internet Protocol address (e.g. IP address), the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.

        When You access the Service, We may collect certain information automatically, including, but not limited to, the type of mobile device You use, Your mobile device unique ID, the IP address of Your mobile device, Your mobile operating system, the type of mobile Internet browser You use, unique device identifiers and other diagnostic data.
        This is to help diagnose data easily.


【ＵＳＥ　ＯＦ　ＹＯＵＲ　ＰＥＲＳＯＮＡＬ　ＤＡＴＡ】
The Company may use Personal Data for the following purposes:

• To provide and maintain our Service, including to monitor the usage of our Service.

• To manage Your Account: to manage Your registration as a user of the Service. The Personal Data You provide can give You access to different functionalities of the Service that are available to You as a registered user.

• For the performance of a contract: the development, compliance and undertaking of the purchase contract for the products, items or services You have purchased or of any other contract with Us through the Service.

• To contact You: To contact You by email, telephone calls, SMS, or other equivalent forms of electronic communication, such as a mobile application's push notifications regarding updates or informative communications related to the functionalities, products or contracted services, including the security updates, when necessary or reasonable for their implementation.

• To provide You with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless You have opted not to receive such information.

• To manage Your requests: To attend and manage Your requests to Us.

• For business transfers: We may use Your information to evaluate or conduct a merger, divestiture, restructuring, reorganization, dissolution, or other sale or transfer of some or all of Our assets, whether as a going concern or as part of bankruptcy, liquidation, or similar proceeding, in which Personal Data held by Us about our Service users is among the assets transferred.

• For other purposes: We may use Your information for other purposes, such as data analysis, identifying usage trends, determining the effectiveness of our promotional campaigns and to evaluate and improve our Service, products, services, marketing and your experience.

We may share Your personal information in the following situations:
• With Service Providers: We may share Your personal information with Service Providers to monitor and analyze the use of our Service, to contact You.

• With Affiliates: We may share Your information with Our affiliates, in which case we will require those affiliates to honor this Privacy Policy. Affiliates include Our parent company and any other subsidiaries, joint venture partners or other companies that We control or that are under common control with Us.

• With Your consent: We may disclose Your personal information for any other purpose with Your consent

【ＣＨＡＮＧＥＳ　ＴＯ　ＴＨＩＳ　ＰＲＩＶＡＣＹ　ＰＯＬＩＣＹ】
We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new Privacy Policy on this page.
We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the "Last updated" date at the top of this Privacy Policy.
You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.


ℂ𝕆ℕ𝕋𝔸ℂ𝕋 𝕌𝕊
If you have any questions about this Privacy Policy, You can contact us:
•By email: kojuan@mcm.edu.ph

    </string>
    <string name="action_settings">Settings</string>
    <string name="enterEmailAddressText">Enter Email Address</string>
    <string name="email">Email</string>
    <string name="enterPasswordText">Enter Password</string>
    <string name="passwordText">Password</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="show">SHOW</string>
    <string name="signUpText">SIGN UP</string>
    <string name="loginAccountText">LOGIN ACCOUNT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyrightNAME">© 2020 (MCM-KHIANJUAN)</string>
    <string name="emailExample">example_email@address.com</string>
    <string name="title_activity_privacypolicy">ScrollingActivity</string>
    <string name="app_settings">App Settings</string>
    <string name="payee">Payee</string>
    <string name="bank">Bank</string>
    <string name="cheque">Cheque</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="tel_no">Tel No.</string>
    <string name="fax_no">Fax No.</string>
    <string name="contact_numbers">Contact Numbers</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="business_address">Business Address</string>
    <string name="remove">Remove</string>
    <string name="importText">Import</string>
    <string name="capture">Capture</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name_f_n_m_i_surname">Enter your Full Name (F.N, M.I. , SURNAME)</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="business_logo">Business Logo</string>

</resources>