<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/gradientBgLogin"
        android:layout_width="436dp"
        android:layout_height="851dp"
        android:layout_weight="1"
        android:background="@drawable/background_gradient"
        android:contentDescription="Gradient Background"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/emailExample"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/passwordText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password_char"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/showHideButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/show"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/privacyPolicyButton"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:text="@string/privacy_policy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/gradientBgLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomDescriptionLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bottomDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/copyrightNAME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpActivityButton"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rec_gradient"
        android:text="@string/action_login_short"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/signUpActivityButton"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginBottom="136dp"
        android:background="@android:color/transparent"
        android:text="SIGN UP ACCOUNT"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/gradientBgLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>