<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gradientBgSignup"
            android:layout_width="421dp"
            android:layout_height="848dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient"
            android:contentDescription="Background Gradient"
            android:forceDarkAllowed="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText"
            tools:targetApi="Q" />

        <EditText
            android:id="@+id/emailAddressSignUpField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enterEmailAddressText"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabelSignUp" />

        <EditText
            android:id="@+id/fullNameTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_your_full_name_f_n_m_i_surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTextViewLabel" />

        <TextView
            android:id="@+id/emailLabelSignUp"
            android:layout_width="390dp"
            android:layout_height="21dp"
            android:layout_marginTop="65dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpAccountTextLabel" />

        <EditText
            android:id="@+id/passwordFieldSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/enterPasswordText"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabelSignUp" />

        <TextView
            android:id="@+id/passwordLabelSignUp"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressSignUpField" />

        <TextView
            android:id="@+id/passwordLabelSignUp3"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirmPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordFieldSignUp" />

        <EditText
            android:id="@+id/passwordFieldConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/confirmPasswordText"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabelSignUp3" />

        <Button
            android:id="@+id/showHideSignupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordFieldConfirmSignUp" />


        <TextView
            android:id="@+id/fullNameTextViewLabel"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showHideSignupButton" />

        <TextView
            android:id="@+id/signUpAccountTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/sign_up_text_camelCase"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gradientBgSignup" />

        <Button
            android:id="@+id/signUpAccountButtonTrigger"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="224dp"
            android:text="@string/signUpText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showHideSignupButton" />

        <Button
            android:id="@+id/loginActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/loginAccountText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpAccountButtonTrigger"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>