<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/requestCameraPermissionButton"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/roundcornerstyle_onetimesetup"
        android:text="@string/camera_access_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionMessage" />

    <Button
        android:id="@+id/accessReadPermissionButton"
        android:layout_width="252dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/roundcornerstyle_onetimesetup"
        android:text="@string/storage_access_button_text"
        app:layout_constraintBottom_toTopOf="@+id/proceedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/readStorageIcon"
        app:layout_constraintTop_toBottomOf="@+id/requestCameraPermissionButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/readStorageIcon"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/storage_icon"
        app:layout_constraintEnd_toStartOf="@+id/requestCameraPermissionButton"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraIcon"
        app:srcCompat="@drawable/storage_icon" />

    <ImageView
        android:id="@+id/cameraIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/camera_icon"
        app:layout_constraintEnd_toStartOf="@+id/requestCameraPermissionButton"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionMessage"
        app:srcCompat="@drawable/camera_icon" />

    <TextView
        android:id="@+id/permissionMessage"
        android:layout_width="315dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/permission_message"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneTimeLabelText" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:background="#66C1BB45"
        android:enabled="false"
        android:text="PROCEED"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestCameraPermissionButton"
        app:layout_constraintVertical_bias="0.576"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/oneTimeLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="One-time Setup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>